# polybaskets-eth

./: .gitignore  DEPLOY.md  README.md
app/: .env.example  README.md  brand.md  index.html  nixpacks.toml  package-lock.json  package.json  server.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
app/public/: basket_market.idl
app/scripts/: _env.mjs  bots.mjs  deploy.mjs  finish-init.mjs  force-settle.mjs  init.mjs  measure-inject.mjs  read-account.mjs  redeploy.mjs  relayer.mjs  repro-slip.mjs  repro-slip2.mjs  seed-pool.mjs  seed-wvara.mjs  settler.mjs  setup-pools.mjs  smoke.mjs  test-tx.mjs  verify-version.mjs
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src/components/: BalancePill.tsx  BasketChart.tsx  BasketRail.tsx  ConnectButton.tsx  FeaturedWorldCup.tsx  Layout.tsx  Logo.tsx  MarketCard.tsx  SlipTray.tsx  SuggestedBaskets.tsx  WorldCupHero.tsx  WorldCupMatches.tsx
app/src/config/: index.ts
app/src/contexts/: BasketContext.tsx  LedgerContext.tsx  WalletContext.tsx
app/src/hooks/: useBasketSeries.ts  useMarkets.ts  usePrices.ts  useWalletBalances.ts
app/src/lib/: basket-utils.ts  betCalculator.ts  flags.ts  gammaEvents.ts  odds.ts  polymarket.ts  positionMath.ts  priceHistory.ts  worldCup.ts
app/src/pages/: BasketPage.tsx  BuilderPage.tsx  ExplorePage.tsx  LandingPage.tsx  MyBasketsPage.tsx  WalletPage.tsx
contract/: Cargo.toml  README.md  build.rs
contract/app/: Cargo.toml
contract/app/src/: lib.rs
contract/client/: Cargo.toml  build.rs
contract/client/src/: basket_market_client.rs  lib.rs
contract/solidity/src/: WvaraVault.sol
contract/src/: lib.rs
contract/tests/: gtest.rs
deploy/: .gitignore  ADDRESSES.md  Dockerfile.ethexe  ethexe.sh  find_router.py  rpc-proxy.py
docs/: 00-overview.md  01-vara-eth-primer.md  02-architecture.md  03-value-collateral-and-deposits.md  04-contracts.md  05-wallet-and-tx-flow.md  06-frontend.md  07-design-system.md  08-polymarket-reuse.md  09-settlement-and-bot.md  10-env-and-config.md  11-roadmap.md  12-open-questions.md  README.md
(+11 files in other folders)
