[package]
name = "basket-market-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing the client for the BasketMarket program allowing to interact with it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["ethexe"] }

[build-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "build"] }
basket-market-app.workspace = true
